update admin controller

--- a/views/admin/staffTable.hbs
+++ b/views/admin/staffTable.hbs
@@ -1,37 +1,84 @@
 <div class="card shadow mb-4">
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#teacher" role="tab" aria-controls="home"
+                aria-selected="true">GIÁO VIÊN</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#staff" role="tab" aria-controls="profile"
+                aria-selected="false">GIÁO VỤ</a>
+        </li>
+    </ul>
     <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>MÃ NHÂN VIÊN</th>
-                        <th>TÊN GIÁO VIÊN</th>
-                        <th>NGÀY SINH</th>
-                        <th>ĐỊA CHỈ</th>
-                        <th>TRẠNG THÁI</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>000001</td>
-                        <td>Trần Minh Triết</td>
-                        <td>02/03/1978</td>
-                        <td>64 Trần Hưng Đạo, Quận 5</td>
-                        <td>Hoạt động</td>
-                        <td><i class="fa fa-pencil-square-o" data-toggle="modal" data-target="#modalEditUser"
-                                aria-hidden="true"></i></td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="text-center">
-                <a href="" class="btn btn-primary btn-rounded mb-4" data-toggle="modal" data-target="#modalAddUser">Thêm
-                    CB-CNV</a>
+        <div class="tab-content profile-tab" id="myTabContent">
+            <div class="tab-pane fade show active" id="teacher" role="tabpanel" aria-labelledby="home-tab">
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <td>STT</td>
+                                <th>MÃ GIÁO VIÊN</th>
+                                <th>TÊN GIÁO VIÊN</th>
+                                <th>CMND</th>
+                                <th>NGÀY SINH</th>
+                                <th>ĐỊA CHỈ</th>
+                                <th>MÃ BM</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            {{#each listTeacherView}}
+                            <tr>
+                                {{#each this}}
+                                <td>{{this}}</td>
+                                {{/each}}
+                                <td><i class="fa fa-pencil-square-o" data-toggle="modal" data-target="#modalEditUser"
+                                        aria-hidden="true"></i></td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="staff" role="tabpanel" aria-labelledby="profile-tab">
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable2" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <td>STT</td>
+                                <th>MÃ GIÁO VIÊN</th>
+                                <th>TÊN GIÁO VIÊN</th>
+                                <th>CMND</th>
+                                <th>NGÀY SINH</th>
+                                <th>ĐỊA CHỈ</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            {{#each listEmployeeView}}
+                            <tr>
+                                {{#each this}}
+                                <td>{{this}}</td>
+                                {{/each}}
+                                <td><i class="fa fa-pencil-square-o" data-toggle="modal" data-target="#modalEditUser"
+                                        aria-hidden="true"></i></td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
+<div class="text-center">
+    <a href="" class="btn btn-primary btn-rounded mb-4" data-toggle="modal" data-target="#modalAddUser">Thêm
+        CB-CNV</a>
+</div>
 <div class="modal fade" id="modalAddUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -47,29 +94,34 @@
                     <input type="text" id="defaultForm-userName" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-dateOfBirth">Ngày sinh</label>
+                    <label data-error="wrong" data-success="right" for="defaultForm-dateOfBirth">Ngày
+                        sinh</label>
                     <input type="text" id="defaultForm-dateOfBirth" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-userAddress">Địa chỉ</label>
+                    <label data-error="wrong" data-success="right" for="defaultForm-userAddress">Địa
+                        chỉ</label>
                     <input type="text" id="defaultForm-userAddress" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-userType">Loại CB-CNV</label>
+                    <label data-error="wrong" data-success="right" for="defaultForm-userType">Loại
+                        CB-CNV</label>
                     <select class="form-control validate" id="defaultForm-userType">
                         <option value="1">1</option>
                         <option value="2">2</option>
                     </select>
                 </div>
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-userSubject">Bộ môn</label>
+                    <label data-error="wrong" data-success="right" for="defaultForm-userSubject">Bộ
+                        môn</label>
                     <select class="form-control validate" id="defaultForm-userSubject">
                         <option value="1">1</option>
                         <option value="2">2</option>
                     </select>
                 </div>
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-userState">Trạng thái</label>
+                    <label data-error="wrong" data-success="right" for="defaultForm-userState">Trạng
+                        thái</label>
                     <select class="form-control validate" id="defaultForm-userState">
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -83,7 +135,8 @@
     </div>
 </div>
 
-<div class="modal fade" id="modalEditUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalEditUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header text-center">
@@ -98,29 +151,34 @@
                     <input type="text" id="defaultForm-userName" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-dateOfBirth">Ngày sinh</label>
+                    <label data-error="wrong" data-success="right" for="defaultForm-dateOfBirth">Ngày
+                        sinh</label>
                     <input type="text" id="defaultForm-dateOfBirth" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-userAddress">Địa chỉ</label>
+                    <label data-error="wrong" data-success="right" for="defaultForm-userAddress">Địa
+                        chỉ</label>
                     <input type="text" id="defaultForm-userAddress" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-userType">Loại CB-CNV</label>
+                    <label data-error="wrong" data-success="right" for="defaultForm-userType">Loại
+                        CB-CNV</label>
                     <select class="form-control validate" id="defaultForm-userType">
                         <option value="1">1</option>
                         <option value="2">2</option>
                     </select>
                 </div>
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-userSubject">Bộ môn</label>
+                    <label data-error="wrong" data-success="right" for="defaultForm-userSubject">Bộ
+                        môn</label>
                     <select class="form-control validate" id="defaultForm-userSubject">
                         <option value="1">1</option>
                         <option value="2">2</option>
                     </select>
                 </div>
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-userState">Trạng thái</label>
+                    <label data-error="wrong" data-success="right" for="defaultForm-userState">Trạng
+                        thái</label>
                     <select class="form-control validate" id="defaultForm-userState">
                         <option value="1">1</option>
                         <option value="2">2</option>
