--- a/views/teacher/managerClassScore.hbs
+++ b/views/teacher/managerClassScore.hbs
@@ -36,6 +36,11 @@
                 file</a>
         </div>
         {{/if}}
+        <div class="semester ml-2 mb-2">
+            <a class="labelSemester fa fa-pencil-square-o" style="cursor: pointer;" data-toggle="modal"
+                data-target="#exportFileExcel" aria-hidden="true"> Xuất
+                file</a>
+        </div>
         <span class="col-md-12" style="text-align:end; margin-bottom: 5px">
             <a class="semester labelSemester" href="/teacher/managerClass">Quay lại</a>
         </span>
@@ -219,3 +224,52 @@
     </div>
 </div>
 {{/if}}
+
+<div class="modal fade" id="exportFileExcel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <form class="modal-content" action="/teacher/managerClass/score/export-excel" method="POST">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Xuất bảng điểm ra file excel</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body mx-3">
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentID">Lớp</label>
+                    <input type="text" id="defaultForm-studentID" class="form-control validate" value="{{className}}"
+                        readonly>
+                </div>
+
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentName">Mã lớp</label>
+                    <input class="form-control validate" type="text" id="defaultForm-studentName" value="{{classID}}"
+                        readonly>
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-score1">GVCN</label>
+                    <input type="text" id="defaultForm-score1" class="form-control validate"
+                        value="{{managerClassName}}" readonly>
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-score1">Học kỳ</label>
+                    <input type="text" id="defaultForm-score1" class="form-control validate" name="semesterID"
+                        value="{{semesterID}}" readonly>
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-score1">Năm học</label>
+                    <input type="text" id="defaultForm-score1" class="form-control validate"
+                        value="{{yearStart}}-{{yearEnd}}" readonly>
+                </div>
+                <div>
+                    <input type="number" name="yearStart" value="{{yearStart}}" style="display: none;" readonly>
+                    <input type="number" name="yearEnd" value="{{yearEnd}}" style="display: none;" readonly>
+                </div>
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <button class="btn btn-danger" type="submit">Xác nhận</button>
+            </div>
+        </form>
+    </div>
+</div>
