export file excel score
- Cho phép giáo viên bộ môn có thể xuất bảng điểm môn ra file excel và tải về máy.

--- a/views/teacher/managerClassScore.hbs
+++ b/views/teacher/managerClassScore.hbs
@@ -1,3 +1,11 @@
+<div class="row">
+    <div class="col-md-6">
+        <div class="row">
+            <a class="labelSemester semester ml-2 mb-2" href="/teacher/managerClass">Quay lại</a>
+        </div>
+    </div>
+</div>
+
 <div class="row" style="margin-bottom: 5px;">
     <div class="col col-md-6">
         <form class="semester labelSemester" action="/teacher/managerClass/score" method="GET">
@@ -41,9 +49,6 @@
                 data-target="#exportFileExcel" aria-hidden="true"> Xuất
                 file</a>
         </div>
-        <span class="col-md-12" style="text-align:end; margin-bottom: 5px">
-            <a class="semester labelSemester" href="/teacher/managerClass">Quay lại</a>
-        </span>
 
     </div>
 </div>
