re-examination for teacher
- Xem danh sách đơn phúc khảo
- Phản hồi đơn phúc khảo
- Chỉnh sửa quản lý lớp học của GVCN

--- a/views/teacher/managerClass.hbs
+++ b/views/teacher/managerClass.hbs
@@ -31,7 +31,12 @@
                         <td>{{fullName}}</td>
                         <td>{{dob}}</td>
                         <td>{{address}}</td>
-                        <td></td>
+
+                        <td>
+                            {{#each listRelativeView}}
+                            {{this}}<br>
+                            {{/each}}
+                        </td>
                     </tr>
                     {{/each}}
                 </tbody>
