--- a/views/staff/class.hbs
+++ b/views/staff/class.hbs
@@ -17,7 +17,7 @@
 </div>
 
 <div class="card shadow mb-4 row">
-    <div style="text-align: center; font-size: 2em; color: black">LỚP 10</div>
+    <div style="text-align: center; font-size: 2em; color: black">KẾT QUẢ</div>
     <div class="card-body col">
         <div class="table-responsive">
             <table class="table table-bordered" id="" width="100%" cellspacing="0">
@@ -33,17 +33,16 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {{#each listClass10}}
                     <tr>
-                        <td>{{classID}}</td>
-                        <td>{{className}}</td>
-                        <td>{{managerClass}}</td>
-                        <td>{{managerName}}</td>
-                        <td>{{roomID}}</td>
-                        <td>{{course}}</td>
-                        <td><a href="{{link}}">Quản lý</a></td>
+                        <td>{{classView.classID}}</td>
+                        <td>{{classView.className}}</td>
+                        <td>{{classView.managerClass}}</td>
+                        <td>{{classView.managerName}}</td>
+                        <td>{{classView.roomID}}</td>
+                        <td>{{classView.course}}</td>
+                        <td><i class="fa fa-pencil-square-o" data-toggle="modal" data-target="#modalEditClass"
+                                aria-hidden="true"></i></td>
                     </tr>
-                    {{/each}}
 
                 </tbody>
             </table>
@@ -52,73 +51,40 @@
     </div>
 </div>
 
+<div class="modal fade" id="modalEditClass" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Điều chỉnh thông tin lớp học</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body mx-3">
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-classID">Mã lớp</label>
+                    <input type="text" id="defaultForm-classID" class="form-control validate">
+                </div>
 
-<div class="card shadow mb-4 row">
-    <div style="text-align: center; font-size: 2em; color: black">LỚP 11</div>
-    <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-bordered" width="100%" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>MÃ LỚP</th>
-                        <th>LỚP</th>
-                        <th>MÃ GVCN</th>
-                        <th>TÊN GVCN</th>
-                        <th>PHÒNG HỌC</th>
-                        <th>KHÓA</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each listClass11}}
-                    <tr>
-                        <td>{{classID}}</td>
-                        <td>{{className}}</td>
-                        <td>{{managerClass}}</td>
-                        <td>{{managerName}}</td>
-                        <td>{{roomID}}</td>
-                        <td>{{course}}</td>
-                        <td><a href="{{link}}">Quản lý</a></td>
-                    </tr>
-                    {{/each}}
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-teacherID">Mã GVCN</label>
+                    <input type="text" id="defaultForm-teacherID" class="form-control validate">
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-roomID">Mã phòng</label>
+                    <input type="text" id="defaultForm-roomID" class="form-control validate">
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-startDate">Ngày bắt đầu</label>
+                    <input type="text" id="defaultForm-startDate" class="form-control validate">
+                </div>
 
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
 
-<div class="card shadow mb-4 row">
-    <div style="text-align: center; font-size: 2em; color: black">LỚP 12</div>
-    <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-bordered" width="100%" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>MÃ LỚP</th>
-                        <th>LỚP</th>
-                        <th>MÃ GVCN</th>
-                        <th>TÊN GVCN</th>
-                        <th>PHÒNG HỌC</th>
-                        <th>KHÓA</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each listClass12}}
-                    <tr>
-                        <td>{{classID}}</td>
-                        <td>{{className}}</td>
-                        <td>{{managerClass}}</td>
-                        <td>{{managerName}}</td>
-                        <td>{{roomID}}</td>
-                        <td>{{course}}</td>
-                        <td><a href="{{link}}">Quản lý</a></td>
-                    </tr>
-                    {{/each}}
-
-                </tbody>
-            </table>
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <button class="btn btn-danger">Xác nhận</button>
+            </div>
         </div>
     </div>
 </div>
@@ -136,17 +102,15 @@
             <div class="modal-body mx-3">
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-teacherID">Mã GVCN</label>
-                    <input name="teacherID" type="text" id="defaultForm-teacherID" class="form-control validate"
-                        required>
+                    <input type="text" id="defaultForm-teacherID" class="form-control validate" required>
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-roomID">Mã phòng học</label>
-                    <input name="roomID" type="text" id="defaultForm-roomID" class="form-control validate" required>
+                    <input type="text" id="defaultForm-roomID" class="form-control validate" required>
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-startDate">Khóa</label>
-                    <input name="course" type="number" id="defaultForm-startDate" class="form-control validate"
-                        required>
+                    <input type="number" id="defaultForm-startDate" class="form-control validate" required>
                 </div>
                 <div class="md-form mb-2" style="text-align: center;">
                     <label data-error="wrong" data-success="right" for="defaultForm-startDate">Danh sách hs</label>
