--- a/views/staff/studentTable.hbs
+++ b/views/staff/studentTable.hbs
@@ -1,30 +1,44 @@
-<div class="card shadow mb-4">
+<div class="row">
+    <div class="col-md-6">
+        <div class="row">
+            <a class="labelSemester semester ml-2 mb-2" href="/staff/class">Quay lại</a>
+        </div>
+    </div>
+    <div class="col-md-6 d-flex justify-content-end">
+        <div class="row">
+            <p class="labelSemester semester ml-2 mb-2">GVCN: {{managerClassName}}</p>
+        </div>
+    </div>
+</div>
+
+<div class="card shadow mb-4 row">
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered" width="100%" cellspacing="0">
                 <thead>
                     <tr>
+                        <th>STT</th>
                         <th>MÃ HỌC SINH</th>
                         <th>TÊN HỌC SINH</th>
                         <th>NGÀY SINH</th>
-                        <th>MÃ LỚP</th>
                         <th>ĐỊA CHỈ</th>
                         <th>TRẠNG THÁI</th>
                         <th></th>
                     </tr>
                 </thead>
                 <tbody>
+                    {{#each listStudentView}}
                     <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011/04/25</td>
-                        <td>$320,800</td>
+                        <td>{{id}}</td>
+                        <td>{{studentID}}</td>
+                        <td>{{fullName}}</td>
+                        <td>{{dob}}</td>
+                        <td>{{address}}</td>
+                        <td>{{status}}</td>
                         <td><i class="fa fa-pencil-square-o" data-toggle="modal" data-target="#modalEditStudent"
-                                aria-hidden="true"></i></td>    
+                                aria-hidden="true"></i></td>
                     </tr>
-
+                    {{/each}}
                 </tbody>
             </table>
         </div>
@@ -49,23 +63,23 @@
 
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-studentName">Tên học sinh</label>
-                    <input type="text" id="defaultForm-studentName" class="form-control validate">                
+                    <input type="text" id="defaultForm-studentName" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-studentBirthdate">Ngày sinh</label>
-                    <input type="text" id="defaultForm-studentBirthdate" class="form-control validate">                
+                    <input type="text" id="defaultForm-studentBirthdate" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-studentAddress">Địa chỉ</label>
-                    <input type="text" id="defaultForm-studentAddress" class="form-control validate">                
+                    <input type="text" id="defaultForm-studentAddress" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-studentClassID">Mã lớp</label>
-                    <input type="text" id="defaultForm-studentClassID" class="form-control validate">                
+                    <input type="text" id="defaultForm-studentClassID" class="form-control validate">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-studentStatus">Trạng thái</label>
-                    <input type="text" id="defaultForm-studentStatus" class="form-control validate">                
+                    <input type="text" id="defaultForm-studentStatus" class="form-control validate">
                 </div>
 
             </div>
