--- a/views/staff/studentTable.hbs
+++ b/views/staff/studentTable.hbs
@@ -17,26 +17,33 @@
             <table class="table table-bordered" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>STT</th>
-                        <th>MÃ HỌC SINH</th>
-                        <th>TÊN HỌC SINH</th>
-                        <th>NGÀY SINH</th>
-                        <th>ĐỊA CHỈ</th>
-                        <th>TRẠNG THÁI</th>
-                        <th></th>
+                        <th style="text-align: center;">STT</th>
+                        <th style="text-align: center;">MÃ HỌC SINH</th>
+                        <th style="text-align: center;">TÊN HỌC SINH</th>
+                        <th style="text-align: center;">NGÀY SINH</th>
+                        <th style="text-align: center;">ĐỊA CHỈ</th>
+                        <th style="text-align: center;">TRẠNG THÁI</th>
+                        <th style="text-align: center;">KHÓA/MỞ</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each listStudentView}}
                     <tr>
-                        <td>{{id}}</td>
-                        <td>{{studentID}}</td>
-                        <td>{{fullName}}</td>
-                        <td>{{dob}}</td>
-                        <td>{{address}}</td>
-                        <td>{{status}}</td>
-                        <td><i class="fa fa-pencil-square-o" data-toggle="modal" data-target="#modalEditStudent"
-                                aria-hidden="true"></i></td>
+                        <td style="text-align: center;">{{id}}</td>
+                        <td style="text-align: center;">{{studentID}}</td>
+                        <td style="text-align: center;">{{fullName}}</td>
+                        <td style="text-align: center;">{{dob}}</td>
+                        <td style="text-align: center;">{{address}}</td>
+
+                        {{#if isLock}}
+                        <td style="text-align: center; color: red;">{{status}}</td>
+                        <td style="text-align: center;"><a href="#" style="color: blue;" class="fa fa-pencil-square-o"
+                                data-toggle="modal" data-target="#{{dataTarget}}" aria-hidden="true">Mở</a></td>
+                        {{else}}
+                        <td style="text-align: center; color: blue">{{status}}</td>
+                        <td style="text-align: center"><a href="#" class="fa fa-pencil-square-o" data-toggle="modal"
+                                data-target="#{{dataTarget}}" aria-hidden="true">Khóa</a></td>
+                        {{/if}}
                     </tr>
                     {{/each}}
                 </tbody>
@@ -45,12 +52,17 @@
     </div>
 </div>
 
-<div class="modal fade" id="modalEditStudent" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+{{#each listStudentView}}
+<div class="modal fade" id="{{dataTarget}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <form class="modal-content" action="/staff/student" method="POST">
             <div class="modal-header text-center">
-                <h4 class="modal-title w-100 font-weight-bold">Điều chỉnh thông tin</h4>
+                {{#if isLock}}
+                <h4 class="modal-title w-100 font-weight-bold">Mở khóa tài khoản học sinh</h4>
+                {{else}}
+                <h4 class="modal-title w-100 font-weight-bold">Khóa tài khoản học sinh</h4>
+                {{/if}}
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -58,34 +70,52 @@
             <div class="modal-body mx-3">
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-studentID">Mã học sinh</label>
-                    <input type="text" id="defaultForm-studentID" class="form-control validate">
+                    <input name="studentID" type="text" id="defaultForm-studentID"
+                        class="form-control validate readonly" value="{{studentID}}" readonly>
                 </div>
 
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-studentName">Tên học sinh</label>
-                    <input type="text" id="defaultForm-studentName" class="form-control validate">
-                </div>
-                <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-studentBirthdate">Ngày sinh</label>
-                    <input type="text" id="defaultForm-studentBirthdate" class="form-control validate">
-                </div>
-                <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-studentAddress">Địa chỉ</label>
-                    <input type="text" id="defaultForm-studentAddress" class="form-control validate">
+                    <input type="text" id="defaultForm-studentName" class="form-control validate" value="{{fullName}}"
+                        readonly>
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-studentClassID">Mã lớp</label>
-                    <input type="text" id="defaultForm-studentClassID" class="form-control validate">
+                    <input name="classID" type="text" id="defaultForm-studentClassID"
+                        class="form-control validate readonly" value="{{classID}}" readonly>
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-studentStatus">Trạng thái</label>
-                    <input type="text" id="defaultForm-studentStatus" class="form-control validate">
+                    {{#if isLock}}
+                    <input type="text" id="defaultForm-studentStatus" class="form-control validate" value="Đang khóa"
+                        readonly>
+                    {{else}}
+                    <input type="text" id="defaultForm-studentStatus" class="form-control validate" value="Đang mở"
+                        readonly>
+                    {{/if}}
+
+                </div>
+
+                <div style="display:none">
+                    {{#if isLock}}
+                    <input name="status" value="1" readonly>
+                    {{else}}
+                    <input name="status" value="0" readonly>
+                    {{/if}}
                 </div>
 
             </div>
+
             <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-danger">Xác nhận</button>
+                {{#if isLock}}
+                <button class="btn btn-danger">Mở khóa tài khoản</button>
+                {{else}}
+                <button class="btn btn-danger">Khóa tài khoản</button>
+                {{/if}}
+
             </div>
-        </div>
+        </form>
     </div>
 </div>
+
+{{/each}}
