update Admin controller, admin view

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -11,7 +11,7 @@
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  
   <!-- Custom styles for this template-->
   {{#each style}}
   <link rel="stylesheet" href="../../css/{{this}}">
@@ -119,6 +119,7 @@
   <script src="../../js/main.js"></script>
   {{!-- custom scripts for datatable --}}
   <script src="../../js/datatable.js"></script>
+  <script src="//cdn.datatables.net/plug-ins/1.10.11/sorting/date-eu.js" type="text/javascript"></script>
 </body>
 
 </html>
