--- a/public/css/styleProfile.css
+++ b/public/css/styleProfile.css
@@ -90,3 +90,15 @@
     font-weight: 600;
     color: #0062cc;
 }
+.inputBox {
+    height: 34px;
+    line-height: 34px;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s, -webkit-box-shadow 0.15s ease-in-out 0s;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(204, 204, 204);
+    border-image: initial;
+    border-radius: 4px;
+    padding: 6px 12px;
+    outline: none;
+}
